--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <img src="./photo/Saravanan.jpg" alt="Your Name" class="profile-img">
         <h2>About Me</h2>
-        <p>Innovative Software Developer in the Publishing Industry. Expert in PERL, XSLT, XPATH and PYTHON</p>
+        <p>Innovative Software Developer in the Publishing Industry. Expert in PERL, XSLT, XPATH and PYTHON. Tech-savvy and a fast learner with innate communication skills and natural curiosity for product</p>
     <nav>
         <ul>
             <li><a href="#project1">ABOUT</a></li>
